--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
   },
   "devDependencies": {},
   "blah": {
-    "ex_img": "http://i.imgur.com/Unb4VUA"
+    "ex_img": "http://i.imgur.com/Unb4VUA.png"
   }
 }
