--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssh-remote",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Automagically switch on the SSH remote url in a Git repository.",
   "main": "lib/index.js",
   "bin": {
@@ -61,6 +61,7 @@
     "bin/",
     "app/",
     "lib/",
+    "build/",
     "dist/",
     "src/",
     "resources/",
